turtlebot_ws/robot_ws/log/build_2024-12-24_08-26-33/assign2_650610841/stderr.log
  File "/home/robot_ws/install/assign2_650610841/lib/python3.10/site-packages/assign2_650610841/master_650610841.py", line 37
    (int(sys.argv[1]), int(sys.argv[2]), int(sys.argv[3]), int(sys.argv[4]) response.sum))
                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

